--- a/Daruk.fsproj
+++ b/Daruk.fsproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <WarnOn>3390;$(WarnOn)</WarnOn>
+    <PackageId>Daruk</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Shawn McGinty</Authors>
+    <Company>N/A</Company>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="src/Telemetry/RawTelemetry.fs" />
